# poseidon377

./: Cargo.toml  LICENSE  README.md  poseidonperm_x17.sage  poseidonperm_x17_oldparams.sage
.github/workflows/: rust.yml
code/: calc_round_numbers.py  generate_parameters_grain.sage  poseidonperm_x3_64_24_optimized.sage  poseidonperm_x5_254_3.sage  poseidonperm_x5_254_5.sage  poseidonperm_x5_255_3.sage  poseidonperm_x5_255_5.sage  test_vectors.txt
code/cpp_1536_24_x3_pf/: hash_1536_24_x3_pf.cpp
code/cpp_1575_25_x3_bf/: CMakeLists.txt
code/cpp_1575_25_x3_bf/frontend/: CMakeLists.txt
code/cpp_1575_25_x3_bf/libHashMIMC/: CMakeLists.txt  HadesMIMC.cpp  HadesMIMC.h
code/cpp_1575_25_x3_bf/libHashMIMC/utils/: F_2_63_ops.h
code/cpp_1575_25_x3_bf/tests/: CMakeLists.txt  F_2_63.cpp  bench.cpp  hashMiMC.cpp
code/cpp_1575_25_x3_bf/tests/tools/: bench_utils.c  bench_utils.h
code/sage_1512_24_x3_bf/: permutation_1512_24_x3_bf.sage
code/sage_1512_6_inv_pf/: permutation_1512_6_inv_pf.sage
code/sage_1518_6_inv_pf/: permutation_1518_6_inv_pf.sage
code/sage_1536_24_x3_pf/: permutation_1536_24_x3_pf.sage
code/sage_1575_25_x3_bf/: permutation_1575_25_x3_bf.sage
code/scripts/: calc_round_numbers.py  create_mds_bf.sage  create_rcs_grain.sage
poseidon-consistency/: Cargo.toml  README.md
poseidon-consistency/benches/: permutation.rs
poseidon-consistency/src/: lib.rs
poseidon-parameters/: CHANGELOG.md  Cargo.toml  README.md
poseidon-parameters/src/: alpha.rs  arc_matrix.rs  error.rs  lib.rs  matrix.rs  matrix_ops.rs  mds_matrix.rs  round_numbers.rs  tests.rs  v1.rs  v2.rs  vec.rs
poseidon-paramgen/: CHANGELOG.md  Cargo.toml  README.md
poseidon-paramgen/src/: alpha.rs  appendix_g.rs  input.rs  lib.rs  matrix.rs  mds.rs  poseidon_build.rs  round_constants.rs  rounds.rs  transcript.rs  utils.rs  v1.rs  v2.rs
poseidon-paramgen/src/matrix/: base.rs  mult.rs  square.rs  traits.rs
poseidon-paramgen/src/v2/: external.rs  internal.rs
poseidon-paramgen/tests/: appendix_g.rs
poseidon-permutation/: CHANGELOG.md  Cargo.toml  README.md
poseidon-permutation/benches/: permutation.rs
poseidon-permutation/src/: lib.rs  permutation.rs  r1cs.rs
poseidon-sp1/: README.md
poseidon-sp1/program/: Cargo.toml
poseidon-sp1/program/src/: main.rs
poseidon-tests/: Cargo.toml
poseidon-tests/test_vectors/: preimage_vk.param
poseidon-tests/tests/: parameters.rs  poseidon377_r1cs.rs
poseidon377/: CHANGELOG.md  Cargo.toml  README.md  build.rs
poseidon377/benches/: oldhash.rs
poseidon377/src/: hash.rs  lib.rs  params.rs  r1cs.rs  temp_params.rs
poseidon377/src/params/: rate_1.rs  rate_2.rs  rate_3.rs  rate_4.rs  rate_5.rs  rate_6.rs  rate_7.rs
poseidon377/src/r1cs/: vendor.rs
poseidon377/tests/: r1cs.rs
src/: generated.rs  hash.rs  lib.rs  param_gen.rs  params.rs  rate_2.rs  sponge.rs
src/param_gen/: mds.rs  rounds.rs
