[workspace]

members = [
    "poseidon377",
    "poseidon-paramgen",
    "poseidon-permutation",
    "poseidon-consistency",
    "poseidon-parameters",
]

[profile.release]
debug = true

[workspace.dependencies]
decaf377 = {default-features = false, git = "https://github.com/penumbra-zone/decaf377", rev = "a6627615663c384191a1c719703f683dbef08ee3"}