[workspace]

members = [
    "poseidon377",
    "poseidon-paramgen",
    "poseidon-permutation",
    "poseidon-consistency",
    "poseidon-parameters",
]

[profile.release]
debug = true

[workspace.dependencies]
decaf377 = {default-features = false, git = "https://github.com/penumbra-zone/decaf377", rev = "69171e407483aa4fcf66438d4ac4d706e6455da7"}