[workspace]

members = [
    "poseidon377",
    # "poseidon-paramgen" # Temporarily excluded until refactored
    "poseidon-permutation",
    # "poseidon-consistency", # Temporarily excluded until paramgen is refactored
    "poseidon-parameters",
    "poseidon-tests",
]

[profile.release]
debug = true
