[package]
name = "poseidon-consistency"
version = "0.3.0"
edition = "2018"
authors = ["Penumbra <team@penumbralabs.xyz>", "redshiftzero <jen@penumbralabs.xyz>"]
description = "Checks consistency between Penumbra and Ark-sponge implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/penumbra-zone/poseidon377"

[dependencies]
poseidon-parameters = { path = "../poseidon-parameters", default-features = false  }
#poseidon-paramgen = { path = "../poseidon-paramgen", default-features = false }
poseidon377 = { path = "../poseidon377", default-features = false }
poseidon-permutation = { path="../poseidon-permutation", default-features = false }
decaf377 = { default-features = false, git = "https://github.com/penumbra-zone/decaf377", branch = "arkworks-0.5" }

[dev-dependencies]
criterion = { version = "0.4", features=["html_reports"] }
ark-ff = "0.5"
ark-ed-on-bls12-377 = "0.5"
num-bigint = "0.4"
proptest = "1"
rand_core = { version = "0.6.3", default-features=false }
rand_chacha = "0.3"
once_cell = "1.8"

[[bench]]
name = "permutation"
harness = false

[features]
default = ["std"]
std = [
    "poseidon-permutation/std",
]
arkworks = [
    "decaf377/arkworks",
]
