[package]
name = "poseidon-parameters"
version = "1.1.0"
edition = "2018"
authors = []
description = "A crate for Poseidon parameters"
license = "MIT OR Apache-2.0"
keywords = ["no_std"]
repository = "https://github.com/penumbra-zone/poseidon377"

[dependencies]
decaf377 = { default-features = false, git = "https://github.com/penumbra-zone/decaf377", branch = "arkworks-0.5" }

[features]
default = ["std"]
alloc = [
    "decaf377/alloc"
]
std = [
    "decaf377/std",
]
