[package]
name = "poseidon-paramgen"
version = "0.1.1"
edition = "2018"
authors = ["Penumbra <crates@penumbra.zone>", "redshiftzero <jen@penumbra.zone>"]
description = "A crate for generating Poseidon parameters"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { version = "1", default-features = false }
ark-ff = { version = "0.3", default-features = false }
ark-std = { version = "0.3", default-features = false }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
merlin = { version = "3.0", default-features = false }
num = { version = "0.4", default-features = false }
num-bigint = { version = "0.4", default-features = false }
poseidon-parameters = { path = "../poseidon-parameters" }
rand_core = { version = "0.6.3", default-features = false, features = ["getrandom"] }

[dev-dependencies]
# ark-bls12-377 = "0.3"
# ark-bls12-381 = "0.3"
ark-bn254 = "0.3"
ark-ed-on-bls12-377 = "0.3"
ark-ed-on-bls12-381 = "0.3"
# proptest = "1"

[features]
default = ["std"]
std = [
    "anyhow/std",
    "ark-ff/std",
    "ark-std/std",
    "merlin/std",
    "num/std",
    "num-bigint/std",
    "rand_core/std",
    "getrandom/std",
]
