[package]
name = "poseidon-paramgen"
version = "0.4.0"
edition = "2018"
authors = ["Penumbra <team@penumbralabs.xyz>", "redshiftzero <jen@penumbralabs.xyz>"]
description = "A crate for generating Poseidon parameters for decaf377"
license = "MIT OR Apache-2.0"
repository = "https://github.com/penumbra-zone/poseidon377"

[dependencies]
anyhow = { version = "1", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-std = { version = "0.4", default-features = false }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
merlin = { version = "3.0", default-features = false }
num = { version = "0.4", default-features = false }
num-bigint = { version = "0.4", default-features = false }
# rand_core = { version = "0.6.3", default-features = false }

poseidon-parameters = { path = "../poseidon-parameters", default-features = false, version = "1.0" }

[dev-dependencies]
decaf377 = { git = "https://github.com/penumbra-zone/decaf377", branch = "enable-lto", default-features = false }
ark-bn254 = "0.4"
ark-ed-on-bls12-377 = "0.4"
ark-ed-on-bls12-381 = "0.4"

[features]
default = ["std"]
std = [
    "anyhow/std",
    "ark-ff/std",
    "ark-std/std",
    "merlin/std",
    "num/std",
    "num-bigint/std",
#    "rand_core/std",
    "getrandom/std",

    "poseidon-parameters/std",
]
