[package]
name = "poseidon-permutation"
version = "0.5.0"
edition = "2018"
authors = ["Penumbra <team@penumbralabs.xyz>", "redshiftzero <jen@penumbralabs.xyz>"]
description = "An instantiation of the Poseidon permutation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/penumbra-zone/poseidon377"

[dependencies]
ark-ff = { version = "0.4", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
ark-r1cs-std = {version = "0.4", default-features = false, optional=true }
ark-relations = { version="0.4", default-features = false, optional=true }

poseidon-parameters = { path = "../poseidon-parameters", default-features = false, version = "0.5" }

[features]
default = ["std"]
r1cs = ["ark-r1cs-std", "ark-relations"]
std = [
    "ark-ff/std",
    "ark-std/std",
    "poseidon-parameters/std",
]
