[package]
name = "poseidon-tests"
version = "0.3.0"
edition = "2018"
authors = ["Penumbra <team@penumbralabs.xyz>", "redshiftzero <jen@penumbralabs.xyz>"]
description = "Common tests for penumbra's poseidon implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/penumbra-zone/poseidon377"

[dependencies]
poseidon-parameters = { path = "../poseidon-parameters", default-features = false  }
#poseidon-paramgen = { path = "../poseidon-paramgen", default-features = false }
poseidon-permutation = { path="../poseidon-permutation", default-features = false }
decaf377 = { default-features = false, git = "https://github.com/penumbra-zone/decaf377", branch = "arkworks-0.5" }
poseidon377 = { path="../poseidon377", features = ["r1cs"] }

[dev-dependencies]
ark-ff = { version = "^0.5.0", default-features = false }
ark-ed-on-bls12-377 = { version="0.5", default-features = false }
proptest = "1"
ark-ed-on-bls12-381 = "0.5"
rand_core = { version = "0.6.3", default-features=false }
rand_chacha = "0.3"
ark-groth16 = { version = "0.5", default-features = false }
ark-r1cs-std = {version = "0.5", default-features = false }
ark-relations = { version="0.5", default-features = false }
ark-snark = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default_features = false }
ark-std = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default_features = false }