[package]
name = "poseidon377"
version = "0.4.0"
edition = "2018"
authors = ["Penumbra <team@penumbralabs.xyz>", "redshiftzero <jen@penumbralabs.xyz>"]
description = "An instantiation of the Poseidon hash for use with decaf377."
license = "MIT OR Apache-2.0"
repository = "https://github.com/penumbra-zone/poseidon377"

[dependencies]
ark-ff = { version = "0.4", default-features = false }
ark-groth16 = { version = "0.4", default-features = false, optional=true }
ark-r1cs-std = {version = "0.4", default-features = false, optional=true }
ark-relations = { version="0.4", default-features = false, optional=true }
ark-snark = { version = "0.4", default-features = false, optional=true }
decaf377 = { version="0.4", default-features = false, features = ["r1cs"] }
num-bigint = { version = "0.4.3", default-features = false }
once_cell = { version = "1.8", default-features = false }
poseidon-parameters = { version="0.4", path = "../poseidon-parameters", default-features = false }
poseidon-permutation = { version="0.4", path = "../poseidon-permutation", default-features = false }

# Dependencies added for ark-sponge vendoring
ark-ec = { version = "0.4", default_features = false, optional=true }
ark-std = { version = "0.4", default-features = false, optional=true }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ], optional = true }
ark-serialize = { version = "0.4", default_features = false, optional=true }

[dev-dependencies]
ark-ed-on-bls12-381 = "0.4"
proptest = "1"
rand_core = { version = "0.6.3", features = ["getrandom"] }
rand_chacha = "0.3"

# Dependencies added for ark-sponge tests
ark-test-curves = { version = "0.4", features = ["bls12_381_curve", "mnt4_753_curve"]}

[features]
default = ["std"]
std = [
    "ark-ff/std",
    "ark-groth16/std",
    "ark-r1cs-std",
    "ark-relations/std",
    "num-bigint/std",
    "once_cell/std",
    "ark-std/std",
    "ark-ec/std",
    "ark-serialize/std",
]
r1cs = [
    "ark-groth16",
    "ark-relations",
    "ark-snark",
    "ark-r1cs-std",
    "decaf377/r1cs",
    "poseidon-permutation/r1cs",
    "ark-std",
    "ark-ec",
    "tracing",
    "ark-serialize",
]
parallel  = [
    "ark-ff/parallel",
    "ark-groth16/parallel",
    "ark-r1cs-std/parallel",
    "decaf377/parallel",
    "ark-std/parallel",
    "ark-ec/parallel",
]

[build-dependencies]
poseidon-paramgen = { version="0.4", path = "../poseidon-paramgen" }
ark-ed-on-bls12-377 = "0.4"
ark-ff = "0.4"

[[test]]
name = "r1cs"
required-features = ["r1cs"]
