[package]
version = "0.1.0"
name = "fibonacci-program"
edition = "2021"

[dependencies]
sp1-zkvm = "2.0.0"
poseidon-parameters = { path = "../../poseidon-parameters", default-features = false  }
#poseidon-paramgen = { path = "../../poseidon-paramgen", default-features = false }
poseidon-permutation = { path="../../poseidon-permutation", default-features = false }
decaf377 = { version="0.10.1", default-features = false }
poseidon377 = { path="../../poseidon377", features = ["r1cs"] }
sp1-derive = "2.0.0"
rand_core = { version = "0.6.3", default-features=false }
rand_chacha = "0.3"

[dev-dependencies]
ark-ff = { version = "^0.4.0", default-features = false }
ark-ed-on-bls12-377 = { version="0.4", default-features = false }
proptest = "1"
ark-ed-on-bls12-381 = "0.4"
ark-groth16 = { version = "0.4", default-features = false }
ark-r1cs-std = {version = "0.4", default-features = false }
ark-relations = { version="0.4", default-features = false }
ark-snark = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default_features = false }
ark-std = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default_features = false }